--- a/package.json
+++ b/package.json
@@ -46,12 +46,16 @@
   "engines": {
     "node": ">=10"
   },
-  "dependencies": {},
+  "dependencies": {
+    "graphql-tag": "^2.11.0",
+    "ra-data-graphql": "^3.8.0"
+  },
   "devDependencies": {
     "@ava/typescript": "^1.1.1",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@typescript-eslint/eslint-plugin": "^4.1.0",
     "@typescript-eslint/parser": "^4.1.0",
+    "apollo-client": "^2.6.10",
     "ava": "^3.12.1",
     "codecov": "^3.7.2",
     "cspell": "^4.1.0",
@@ -62,10 +66,12 @@
     "eslint-plugin-functional": "^3.0.2",
     "eslint-plugin-import": "^2.22.0",
     "gh-pages": "^3.1.0",
+    "graphql": "^15.3.0",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
     "open-cli": "^6.0.1",
     "prettier": "^2.1.1",
+    "react-admin": "^3.8.4",
     "standard-version": "^9.0.0",
     "ts-node": "^9.0.0",
     "typedoc": "^0.19.1",
